# RadioTelescope

./: .gitignore  CLAUDE.md  README.md  config.example.toml  config.toml  deploy.sh  docker-compose.dev.yml  docker-compose.yml  events.jsonl  motion.jsonl  passwords.txt  pyproject.toml  spectrum_baseline.json
.claude/: settings.json  settings.local.json
docs/: goes-mode.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: analytics.ts  (+9 more)
hardware/: Dockerfile  config.dev.toml  config.example.toml  docker-compose.yml  pyproject.toml
infra/: README.md
platform/: Dockerfile  auth_events.jsonl  config.dev.toml  config.example.toml  events.jsonl  pyproject.toml
platform/frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json
platform/frontend/public/: rt-env.js
platform/frontend/src/: App.tsx  analytics.ts  api.ts  guidedObservation.ts  main.tsx  tour.ts  types.gen.ts  types.ts
platform/frontend/src/components/: AdminPage.tsx  BaselineWizard.tsx  DopplerAnimation.tsx  DopplerExplainer.tsx  FeedbackDialog.tsx  FeedbackToast.tsx  HydrogenAtom.tsx  InfoSection.tsx  MotionControls.tsx  QueuePage.tsx  SpectrumPanel.tsx  StarsBackground.tsx  TelemetryDashboard.tsx  TopBar.tsx
platform/frontend/src/components/QueuePage/: HeroSpectrum.tsx  index.tsx
platform/frontend/src/components/SkyMap/: CameraPip.tsx  index.tsx
platform/frontend/src/components/SkyMap/aladin/: useAladinInit.ts
platform/frontend/src/components/SkyMap/horizon/: layers.ts  useHorizonCanvas.ts
platform/frontend/src/components/SkyMap/spectrum/: SurveySelector.tsx
platform/frontend/src/components/SpectrumPanel/: index.tsx
platform/frontend/src/components/goes/: GoesConnectPanel.tsx  GoesDataExplorer.tsx
platform/frontend/src/data/: tourCopy.json
platform/frontend/src/lib/: astro.golden.test.ts  astro.ts  dopplerAnimation.ts  goes.ts  queueHeroSpectrum.ts  spectrum.ts  spectrumChartOptions.ts  spectrumDetection.ts  spectrumTypes.ts  useBackendCatalog.ts  useGoesStream.ts  useLna.ts  useMapTarget.ts  useMotionCommands.ts  useObservationMode.ts  useQueueLease.ts  useSlewTargetArrivalClear.ts  useSpectrumStatus.ts  useSpectrumWaterfall.ts  useTelemetry.ts  useVisibleAnimation.ts
platform/frontend/src/lib/__fixtures__/: astro.golden.json
platform/frontend/src/styles/: admin.css  controls.css  dashboard.css  dialogs.css  doppler-modal.css  footer.css  goes.css  info-section.css  main.css  queue-page.css  responsive.css  shell.css  sky-map.css  spectrum.css  telemetry.css  tokens.css
platform/frontend/src/types/: aladin-lite.d.ts
platform/src/rt_platform/: config.py  main.py
platform/src/rt_platform/api/: _proxy.py  client_allowlist.py  dependencies.py  rate_limit.py  routes_camera.py  routes_events.py  routes_feedback.py  routes_goes.py  routes_motor.py  routes_queue.py  routes_spectrum.py  security_headers.py
platform/src/rt_platform/services/: _pubsub.py  hardware_client.py  queue.py  spectrum_bridge.py  ws_bridge.py
platform/tests/: conftest.py  test_config.py  test_goes_proxy.py  test_proxy_table.py  test_queue.py  test_shared_sources.py  test_ws_bridge.py
tests/: conftest.py  fake_roboclaw.py  test_api.py  test_config.py  test_current_sensor.py  test_motion_service.py  test_motor.py  test_position_sensor.py  test_queue.py  test_roboclaw_driver.py  test_roboclaw_service.py  test_safety.py
(+117 files in other folders)
