[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotelescope"
version = "0.1.0"
description = "Raspberry Pi radio telescope controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "lgpio>=0.2",
    "smbus2>=0.4",
    "pyrtlsdr>=0.3",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
radiotelescope = "radiotelescope.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
radiotelescope = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
