[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "radiotelescope"
version = "0.1.0"
description = "RoboClaw web controller"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.0",
    "pyserial>=3.5",
    "katpoint>=0.10",
    "httpx>=0.27",
    "itsdangerous>=2.2",
    "numpy>=1.26",
    # 0.3.0 works with stock librtlsdr; later builds depend on
    # rtlsdr_set_dithering which is missing from most system libs.
    "pyrtlsdr==0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
radiotelescope = "radiotelescope.main:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
